--- a/stano_kubik_vcelkova_pis.tex
+++ b/stano_kubik_vcelkova_pis.tex
@@ -12,6 +12,7 @@
 \usepackage{hyperref} 
 \usepackage{cite}
 \usepackage[margin=1.3in]{geometry}
+\usepackage{float}
 
 \setlength{\tabcolsep}{18pt}
 \renewcommand{\arraystretch}{1.5}
@@ -90,19 +91,19 @@
  \hline
  \multicolumn{4}{|c|}{\textbf{Podiel práce}} \\
  \hline
- Časť projektu & Martin Staňo & Veronika Včelková & Dávid Kubík\\
+ Časť projektu & Dávid Kubík & Martin Staňo & Veronika Včelková\\
  \hline
- Počiatočný návrh a identifikácia úloh & 0 & 0 &  0\\
+ Počiatočný návrh a identifikácia úloh & 30 & 30 &  40\\
  \hline
- Zapracovanie pripomienok z konzultácií a vytvorenie návrhu v IBM BPM & 0 & 0 &  0\\
+ Zapracovanie pripomienok z konzultácií a vytvorenie návrhu v IBM BPM & 40 & 30 &  30\\
  \hline
- Návrh formulárov & 0 & 0 &  0\\
+ Návrh formulárov & 30 & 30 &  40\\
  \hline
- Návrh použitia webových služieb & 0 & 0 &  0\\
+ Návrh použitia webových služieb & 30 & 40 &  30\\
  \hline
- Implementácia v IBM BPM & 0 & 0 &  0\\
+ Implementácia v IBM BPM & 30 & 40 &  30\\
  \hline
- Vypracovanie dokumentácie & 0 & 0 &  0\\
+ Vypracovanie dokumentácie & 40 & 30 &  30\\
  
  \hline
 \end{tabular}
@@ -116,7 +117,7 @@
 Cieľom tohto projektu je definovať biznis procesy na podporu nižšie popísanej problémovej domény. Tieto biznis procesy budu navrhnuté, implementované a otestované v prostredí IBM BPM. Pri návrhu a implementácií biznis procesov sa dbalo na dodržiavanie princípov SOA (využívanie webových služieb a ich správne prepojenie).
 
 
-\subsection{Zadanie - špecifikácia}
+\subsection{Špecifikácia}
 
 Horizont H2020 určuje vedeckovýskumným pracoviskám povinnosť evidovať svoje publikované výsledky VaV v repozitári – vlastnom, konzorcionálnom, národnom. Údaje, ktoré popisujú dokument – bibliografický záznam, môže vykonávať spracovateľ, knihovník, alebo priamo vedec.
 
@@ -134,6 +135,19 @@ Navrhnite procesy, ktoré umožnia spracovať a sprístupňovať repozitár publ
 
 \newpage
 
+\subsection{Obmedzenia}
+V nami implementovanom systéme sú nasledovné obmedzenia:
+\begin{itemize}
+\item na zobrazenie názvu, kľúčových slov a autorov bibliografického záznamu stačí, keď má vedec rank 0, to znamená, že tieto informácie sú dostupné pre všetkých prihlásených vedcov,
+\item na zobrazenie abstraktu a obsahu bibliografického záznamu, musí mať vedec rank aspoň 1,
+\item na zobrazenie náhľadu bibliografického záznamu, musí mať vedec rank aspoň 2,
+\item na zobrazenie plného textu bibliografického záznamu musí mať vedec rank 3.
+\end{itemize}
+
+\subsection{Vypracovanie projektu}
+Návrh aj implementácia nášho projektu bude realizovaná vo vývojovom prostredí IBM Business Process Designer 8.5.5. Diagram dátového modelu bude vytvorený vo webovom nástroji draw.io.
+
+
 \section{Návrh, analýza a opis biznis procesov}
 
 V tomto projekte budú analyzované a implementované nasledujúce biznis procesy súvisiace s problémovou doménou:
@@ -144,24 +158,25 @@ V tomto projekte budú analyzované a implementované nasledujúce biznis proces
 \item Vyhľadanie bibliografického záznamu
 \end{itemize}
 
-\subsection{Dátový model}
+\newpage
 
+\subsection{Dátový model}
 Vo vyššie pomenovaných biznis procesoch sme identifikovali nasledujúce entity ako aj ich atribúty a vzťahy medzi nimi. Tieto entity zároveň reprezentujú naše biznis objekty (komplexné dátové typy).
 
-\begin{figure}[h]
+\begin{figure} [H]
 \label{datamodel}
 \centering
 \includegraphics[scale=0.4]{datovy_model.png} 
 \caption{ER diagram dátového modelu}
 \end{figure}
 
-\subsection{Nahranie bibliografického záznamu}
+\subsection{Biznis proces upload a bibliographic record}
 V nasledujúcich podkapitolách sa bližšie pozrieme na biznis proces - nahranie bibliografického záznamu.
 
-\subsection{Cieľ biznis procesu}
+\subsubsection{Cieľ biznis procesu}
 Cieľom tohto biznis procesu je nahranie bibliografického záznamu do konkrétneho digitálneho repozitára. Knihovník vykoná kontrolu údajov a potvrdí ich potencionálnu správnosť.
 
-\subsection{Používateľské roly}
+\subsubsection{Používateľské roly}
 Jednotlivé kroky procesu sú rozdelené do troch plaveckých dráh.
 
 \begin{itemize}
@@ -170,9 +185,11 @@ Jednotlivé kroky procesu sú rozdelené do troch plaveckých dráh.
 \item \textbf{Knihovník} Táto plavecká dráha obsahuje úlohy, ktoré bude vykonávať knihovník.
 \end{itemize}
 
-\subsection{Biznis objekty}
-\textbf{Institucia}\\
-Tento biznis objekt reprezentuje vedeckovýskumné pracovisko, ktoré eviduje publikované výsledky v repozitári. Parametre tohto biznis objektu sú nasledovné:
+\newpage
+
+\subsubsection{Biznis objekty}
+\textbf{Institution}\\
+Tento biznis objekt reprezentuje vedeckovýskumné pracovisko, ktoré eviduje publikované výsledky v digitálnom repozitári. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
@@ -181,116 +198,142 @@ Tento biznis objekt reprezentuje vedeckovýskumné pracovisko, ktoré eviduje pu
 \item \textbf{country:} krajina, v ktorom je hlavné sídlo danej inštitúcie.
 \end{itemize}
 
-\textbf{Knihovnik}\\
-Tento biznis objekt reprezentuje zamestnanca vedeckovýskumného pracoviska, ktorý má na starosti okrem iného aj potvrdzovanie správnosti zadaných údajov bibliografického záznamu. Parametre tohto biznis objektu sú nasledovné:
+\textbf{Librarian}\\
+Tento biznis objekt reprezentuje knihovníka digitálneho repozitáru, ktorý má na starosti okrem iného aj potvrdzovanie správnosti zadaných údajov digitálneho objektu bibliografického záznamu. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
 \item \textbf{name:} krstné meno uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
-\item \textbf{last\_name:} priezvisko uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
+\item \textbf{surname:} priezvisko uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
 \item \textbf{email:} emailová schránka pracovníka vedeckovýskumného ústavu,
-\item \textbf{institucia\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétnu inštitúciu,
-\item \textbf{rank:} úroveň pracovníka k sprístupneniu publikácií.
+\item \textbf{password:} prístupové heslo do systému.
 \end{itemize}
 
-\textbf{Vedec}\\
+\textbf{Researcher}\\
 Tento biznis objekt reprezentuje zamestnanca vedeckovýskumného pracoviska, ktorý svoje výsledky publikuje do digitálneho repozitára. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
 \item \textbf{name:} krstné meno uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
-\item \textbf{last\_name:} priezvisko uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
+\item \textbf{surname:} priezvisko uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
 \item \textbf{email:} emailová schránka pracovníka vedeckovýskumného ústavu,
-\item \textbf{institucia\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétnu inštitúciu,
-\item \textbf{rank:} úroveň pracovníka k sprístupneniu publikácií.
+\item \textbf{rank:} úroveň pracovníka k sprístupneniu publikácií,
+\item \textbf{password:} prístupové heslo do systému,
+\item \textbf{institution\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétnu inštitúciu.
 \end{itemize}
 
-\textbf{Vedec\_Publikacia}\\
+\textbf{Research\_Article}\\
 Tento biznis objekt reprezentuje prepojovaciu tabuľku v systémovej databáze medzi vedcami a publikáciami. K tomuto kroku sme pristúpili z dôvodu, aby sme vedeli korektne vyjadriť vzťah many-to-many. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
-\item \textbf{vedec\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na autora publikovaného bibliografického záznamu v digitálnom repozitári,
-\item \textbf{publikacia\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na publikovaný bibliografický záznam v digitálnom repozitári.
+\item \textbf{affilation:} rola autora/spoluautora na danom bibliografickom zázname, napr. spoluautor, prekladateľ, ilustrátor,
+\item \textbf{researcher\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na autora publikovaného bibliografického záznamu v digitálnom repozitári,
+\item \textbf{article\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na publikovaný bibliografický záznam v digitálnom repozitári.
 \end{itemize}
 
-\textbf{Publikacia}\\
+\textbf{Proceedings}\\
+Tento biznis objekt reprezentuje zborník, ktorý vznikol ako dôsledok určitej vedeckej konferencie. Parametre tohto biznis objektu sú nasledovné:
+
+\begin{itemize}
+\item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
+\item \textbf{name:} názov zborníku vedeckej konferencie,
+\item \textbf{year:} rok, kedy bol zborník vedeckej konferencie vydaný,
+\item \textbf{isbn:} medzinárodné štandardné číslo knihy (z angl. international standard book number) pod ktorým bol zborník vedeckej konferencie publikovaný,
+\item \textbf{publisher:} vydavateľ zborníku vedeckej konferencie,
+\item, \textbf{conference\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na vedeckú konferenciu.
+\end{itemize}
+
+\textbf{Article}\\
 Tento biznis objekt reprezentuje bibliografický záznam v databáze vedeckovýskumného pracoviska. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
 \item \textbf{name:} názov publikácie, pod ktorým je uvedená v databáze vedeckovýskumného pracoviska,
-\item \textbf{isbn:} medzinárodné štandardné číslo knihy (z angl. international standard book number) pod ktorým bol bibliografický záznam publikovaný,
 \item \textbf{keywords:} kľúčové slová, ktoré sa využívajú pri vyhľadaní danej publikácie v digitálnom repozitári,
-\item \textbf{abstrakt\_text:} stručný výťah publikovaného bibliografického záznamu,
-\item \textbf{published\_date:} dátum, kedy bol daný bibliografický záznam publikovaný v zborníku,
-\item \textbf{reviewed\_date:} dátum, kedy bola publikácia revidovaná. 
+\item \textbf{proceedings\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na zborník vedeckej konferencie.
 \end{itemize}
 
-\textbf{Repozitar}\\
-Tento biznis objekt reprezentuje digitálny repozitár. Parametre tohto biznis objektu sú nasledovné:
+\textbf{Conference}\\
+Tento biznis objekt reprezentuje vedeckú konferenciu. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
-\item \textbf{name:} názov digitálneho repozitáru,
-\item \textbf{druh\_id} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétny typ digitálneho repozitáru.
+\item \textbf{name:} názov vedeckej konferencie,
+\item \textbf{periodic:} vyjadruje pravdivostnú hodnotu periodicity vedeckej konferencie, či sa opakuje v pravidelných intervaloch,
+\item \textbf{category:} oblasť výskumu vedeckej konferencie.
 \end{itemize}
 
-\textbf{Druh}\\
-Tento biznis objekt reprezentuje typ digitálneho repozitáru. Digitálny repozitár môže byť napríklad vlastný, konzorcionálny alebo národný. Parametre tohto biznis objektu sú nasledovné:
+\textbf{Digital\_object}\\
+Tento biznis objekt reprezentuje digitálny objekt uložený v digitálnom repozitári. Parametre tohto biznis objektu sú nasledovné:
 
 \begin{itemize}
 \item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
-\item \textbf{name:} typ digitálneho repozitáru.
+\item \textbf{name:} názov digitálneho objektu v digitálnom repozitári,
+\item \textbf{type:} typ digitálneho objektu, napr. abstrakt, plný text,
+\item \textbf{persistent\_identifier:} perzistentný identifikátor, cez ktorý je digitálny objekt prístupná na internete,
+\item \textbf{persistent\_identifier\_type:} typ perzistnentného identifikátoru, napr. doi, ark, eisp,
+\item \textbf{edited:} dátum poslednej úpravy digitálneho objektu,
+\item \textbf{valid:} pravdivostná hodnota vyjadrujúca, či zadané údaje v digitálnom objekte sú korektné,
+\item \textbf{validated\_by:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na zamestnanca, ktorý kontroloval správnosť údajov digitálneho objektu,
+\item \textbf{inserted\_by:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na zamestnanca, ktorý vložil digitálny objekt do digitálneho repozitáru,
+\item \textbf{article\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na bibliografický záznam, z ktorého bol digitálny objekt vytvorený.
 \end{itemize}
 
-\textbf{Notifikacia}\\
-Tento biznis objekt reprezentuje notifikácie, ktoré informujú spoluautorov a konkrétneho spracovateľa o vložení údajov ako aj informujú o potvrdení správnosti týchto údajov knihovníkom a informujú tiež o zverejnení publikácie. Parametre tohto biznis objektu sú nasledovné:
+\subsubsection{Kroky procesu upload a bibliographic record}
+V tejto časti uvádzame podrobný opis krokov biznis procesu nahranie bibliografického záznamu a rozhodovacích blokov tohto biznis procesu.
 
 \begin{itemize}
-\item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
-\item \textbf{subject:} hlavička (predmet) notifikácie,
-\item \textbf{knihovnik\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétneho knihovníka vedeckovýskumného ústavu, ktorého akcia vyvolala vygenerovanie notifikácie,
-\item \textbf{vedec\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétneho vedca vedeckovýskumného ústavu, ktorý je adresátom notifikácie,
-\item \textbf{notification\_text:} Obsah notifikácie obsahujúci podrobnejšie informácie,
-\item \textbf{type:} typ notifikácie,
-\item \textbf{sent\_date:} dátum odoslania notifikácie.
+\item \textbf{Choose role - ľudská úloha}
 \end{itemize}
 
-\textbf{Pripomienka}\\
-Tento biznis objekt reprezentuje pripomienku na zmenu údajov už publikovaného bibliografického záznamu, ktorého údaje boli zároveň skontrolované a ich správnosť potvrdená knihovníkom. Parametre tohto biznis objektu sú nasledovné:
+\textbf{Rola:} Super user\\
+\textbf{Výstup:} objekt \textit{chosen\_role} typu \textit{String}, ktorý vyjadruje používateľom zvolenú rolu.
+
+\begin{figure} [H]
+\centering
+\includegraphics[scale=0.7]{forms/formChooseRole.jpg} 
+\caption{Formulár na výber role}
+\end{figure}
 
 \begin{itemize}
-\item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
-\item \textbf{submitted\_by:} krstné meno a priezvisko vedca vedeckovýskumného pracoviska, ktorý navrhuje úpravu údajov v bibliografickom zázname,
-\item \textbf{zaznam\_id:} 
-\item \textbf{subject:} hlavička (predmet) pripomienky,
-\item \textbf{comment\_text:} Obsah pripomienky obsahujúci podrobnejšie informácie o zmenách, ktoré chce vedec vykonať v bibliografickom zázname,
-\item \textbf{submited\_date:} dátum podania pripomienky,
-\item \textbf{commited:} pravdivostná hodnota, či knihovník zapracoval úpravy údajov v publikovanom bibliografickom zázname.
+\item \textbf{Rozhodovací blok - As which role do you want to sign in?}
 \end{itemize}
 
-\textbf{Zaznam}\\
-Tento biznis objekt reprezentuje publikovaný bibliografický záznam v digitálnom repozitári. Parametre tohto biznis objektu sú nasledovné:
+\textbf{Atribút rozhodovania:} \textit{chosen\_role} - zisťujeme, či je obsah daného atribútu ekvivalentný s reťazcom "librarian". Ak áno, tak biznis proces pokračuje krokom \textit{Login as librarian}. Ak nie, tak biznis proces pokračuje krokom \textit{Login as researcher}.
 
 \begin{itemize}
-\item \textbf{id:} unikátny primárny kľúč v systémovej databáze,
-\item \textbf{name:} názov publikácie, pod ktorým je uvedená v digitálnom repozitári,
-\item \textbf{valid:} pravdivostná hodnota, ktorá vyjadruje, či sú údaje v publikácii správne,
-\item \textbf{edited:} dátum, kedy bola publikácia v digitálnom repozitári naposledy upravená,
-\item \textbf{validated:} dátum, kedy bolo rozhodnuté, že údaje v publikácii sú validné,
-\item \textbf{accessible\_by:} vyjadruje minimálnu požadovanú úroveň pracovníka k sprístupneniu publikácie,
-\item \textbf{knihovnik\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétneho knihovníka,
-\item \textbf{vedec\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétneho vedca,
-\item \textbf{repozitar\_id:} cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétny repozitár.
-
+\item \textbf{Login as researcher - ľudská úloha}
 \end{itemize}
+
+\textbf{Rola:} Researcher\\
+\textbf{Výstup:} objekt \textit{researcher} typu \textit{Researcher} s nastavenými atribútmi:
+
+\begin{itemize}
+\item \textit{researcher.id} - unikátny primárny kľúč v systémovej databáze,
+\item \textit{researcher.name} - krstné meno uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
+\item \textit{researcher.surname} -  priezvisko uvedené v rodnom liste pracovníka vedeckovýskumného ústavu,
+\item \textit{researcher.email} - emailová schránka pracovníka vedeckovýskumného ústavu,
+\item \textit{researcher.rank} - úroveň pracovníka k sprístupneniu publikácií,
+\item \textit{researcher.password} - prístupové heslo do systému,
+\item \textit{researcher.institution\_id} - cudzí kľúč v systémovej databáze, ktorý sa odkazuje na konkrétnu inštitúciu.
+\end{itemize}
+
+Prostredníctvom grafického používateľského rozhrania používateľ zadá \textit{login\_id} a \textit{password}, následne po stlačení tlačidla \textit{OK}, pokračuje hlavný biznis proces. Bližšie sa na tento podproces a jeho kroky pozrieme v kapitole ~\ref{researcher}.
+
+\begin{figure} [H]
+\centering
+\includegraphics[scale=0.7]{forms/formLogin.jpg} 
+\caption{Formulár prihlasovania vedca}
+\end{figure}
+
+
+\subsection{Biznis proces login as researcher} \label{researcher}
+
+\newpage
 
 \section{Zhrnutie}
 TODO
-
-\section{Report práce členov tímu}
-
 
 
 
